antrea-network-policy-01.yml
# Antrea network policy to allow ingress traffic through matchLabels and drop egress traffic to subnet
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: server-anp
  namespace: np-test
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          type: server
  ingress:
    - name: AllowFromClient
      action: Allow
      from:
        - podSelector:
            matchLabels:
              type: client
      ports:
        - protocol: TCP
          port: 8080
      enableLogging: false
    - name: DenyFromRougeClient
      action: Drop
      from:
        - podSelector:
            matchLabels:
              type: rouge-client
  egress:
    - action: Drop
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
      name: DropToThirdParty
      enableLogging: true
