cluster-network-policy-01.yml
# CNP with Stand-Alone selectors
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: acnp-with-stand-alone-selectors
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          role: server
    - namespaceSelector:
        matchLabels:
          env: prod
  ingress:
    - action: Drop
      from:
        - podSelector:
            matchLabels:
              type: rouge-client
          namespaceSelector:
            matchLabels:
              env: prod
      ports:
        - protocol: TCP
          port: 8080
      name: AllowFromClient
      enableLogging: true
  egress:
    - action: Drop
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8080
      name: DropToThirdParty
      enableLogging: true
